# pre-commit-mirrors-trivy

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: main.yml
trivy-wrapper/: cli.py
trivy_wrapper/: __init__.py  cli.py
