[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "trivy-wrapper"
version = "0.1.0"
description = "Python wrapper for Trivy to use in pre-commit"
authors = [
  { name="Gauke Teijema", email="info@gauket.nl" }
]
dependencies = []

[project.scripts]
trivy-wrapper = "trivy_wrapper.cli:main"
