[metadata]
name = trivy_py
version = 0.66.0
description = Python wrapper around invoking trivy (https://trivy.dev/)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GaukeT/pre-commit-mirrors-trivy
author = Gauke Teijema
author_email = info@gauket.nl
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.9
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [trivy]
    group = trivy-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/aquasecurity/trivy/releases/download/v0.66.0/trivy_0.66.0_Linux-64bit.tar.gz
    sha256 = <sha256sum-linux-x86_64>
    extract = tar
    extract_path = trivy

    [trivy]
    group = trivy-binary
    marker = sys_platform == "linux" and platform_machine == "aarch64"
    url = https://github.com/aquasecurity/trivy/releases/download/v0.66.0/trivy_0.66.0_Linux-ARM64.tar.gz
    sha256 = <sha256sum-linux-arm64>
    extract = tar
    extract_path = trivy

    [trivy]
    group = trivy-binary
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/aquasecurity/trivy/releases/download/v0.66.0/trivy_0.66.0_macOS-ARM64.tar.gz
    sha256 = <sha256sum-macos-arm64>
    extract = tar
    extract_path = trivy

    [trivy]
    group = trivy-binary
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    url = https://github.com/aquasecurity/trivy/releases/download/v0.66.0/trivy_0.66.0_macOS-64bit.tar.gz
    sha256 = <sha256sum-macos-x86_64>
    extract = tar
    extract_path = trivy

    [trivy.exe]
    group = trivy-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    url = https://github.com/aquasecurity/trivy/releases/download/v0.66.0/trivy_0.66.0_Windows-64bit.zip
    sha256 = <sha256sum-windows-amd64>
    extract = zip
    extract_path = trivy.exe